@@ -19,7 +19,7 @@ func init() {
 	// Packed Files
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJzsV02To7oV3edn9DapBES7E1I1C0M/BNhNj3E3EtpZkhuwJUw1+ANS+e8pCRsb98xLTb3tW0x5GqT7ce6951z+81BXa/aPj0Ks6XrV/L2V4uHfD1R6DXnbZbEUNUGhSPFilgJz+1o4coVOIpVJzqdVziTvXguHBoXpBcUxC8pIcD85zqWo6XIiqPQKCpPtd0Ry6kdCn7k/W8aCYqdOcSzmMtmnKKwJWthEejUD78XcnRbz9/6XIm+fIi4oSvbcnTQUxOI7zhoGvc2qNSWFieBuUAdu0MRL9Rs2KZrkBCQNQRPj1j73Q5MsQ+7K6EAlqYiVtPrd2y4jVnhMj1XL0UmwbjebL52KykqkVvyxQpMtwdmTW0yzwHWMNXbEa+HUFPDOzXZNAJNH7oe5Okuh6LhnVxwmjbITuNMs8J2cw+wpgHHOoddR5Rck3dmePvtaOBUtHZP7L+c78eH6LOq4H4oUmWd/Zs6e722LPfMTg1mRwWSSU3yxE5oUJt1rtsvU3/Ols6GWM8HAq6lnG9S06xWOjMv7G99Xn8V0eEctIljJ2xWOFQYyRaeOLG7uwuQxBcmRP+8y1IaDDV1/Kbb971ATXWMOhUFhX29dV+CVpK/lPkWmYJaTp+e+SIG9Z1bcpkjsuf/S38eRwMA2ue+Y3A35r9XkJ7hBYRBkPAX+PZ63dXmZuYWRUeQdL/gx6Bmr5122QpMjx/GlxkNf9TgZmYqNlpGegTH257j8eMLg+2x47jpNip0jwcHTbT0Ct+/Dvh/ZzXldC6BnAJCKwvenAJ4O5Hjjy51mBBNBy8WBWfF2hR51vgSK/Z0PwaWaP9tIramKbcOmP7bDUXx8LRyT+NO7WE4H0tpbCqJPlUMA40MKGsGysR0K7XJuhYJA0WErqqnFVV5Pgd8/+5o7OzBLdOqe6tk1jjQOfQ+QivqxYMIGKTqZBL9cZrgjitOs+MA2X2r1SfB2jL+vuCwZ1U/5O8fS3GHWBH6yveAzXzoKs+EegfZmBZL2enaUl7I1YUDXSXGQ4l6D4PCDS6/m6DrHDCQ1QZFBreDaw+farkAyeS2cgYvPed1hoHzFLUfvuodTYB/Xb+f8IGkpML7Y5fBfTxpTmBQEecYI481lriJBYbLh0G5v8SI3ujJgaCWGsj/EAxuxxiqnULgl3xHVj7/lOTPULJrdzE3+icDV/1ye4zNNe7acyrBwghRHrzecsQsHXmB14HJBoddxKDYMJDmT0S5sj1l47rewParYyhXw5Ar8Vs7daanqzKw4ZyArZ4vdt4e/9fIp181nwX4goG8oMZgUm7NgbihaPAXQFNwPqxSchRWHJesUQQ6i1REcm8ydVBQae4ImeSpPgjybPcEuRwJ3OatAOVLoGeT/Ca80cyq9kiBTDemeIntL3szHOVYg1Q1RvvDi94T3ah/rpinwotpQMJErxE2m3ymC4S2DLzMGbU24tIyMFJ3qvmkVUdqAJLZeKK6k5xxTHO9eC+XT3mqibCfbuRVNmBULupxMKDoWw+D7sVpChBKYQJoH4ic1wS974tpq+BVp79fIrOcyrhjoYw6yXxL2huC4XaHoT3H/g+KOFxpvsfaVYEcGBqeKKdyxWgAHMj7X/wd4jDG8f27Q7oa8sx8TJrZ4xWH+wWRSEpwPQn0mSV3zi0ir+cXF4+ccnOfVetn+rmD8UZGBA1Y/FRq9tPY4Nime/gSzn/aDwaS3Z+CUc5h8cCCMlWe3BHGx9qejReKyuHBfHEc190PVC+vZs7343oviX+dFXX3FqP+nfTzvsnC0wBgZ031hjpedi9B8XXZ0bS98cBUIM1+B5CPFYZvi7Sh+3VNv6k7PvwwMwnIjXpeY1YfIy21sjep9DBoxiKB7W6ebe1dhbwkyD1wmH7qXRnlpO9nA479yB3pGirWf2WWeL+dIGR5Ujne9dMbqVnf03Vb5p+j90jOSSbu54bexiI5EfuBVvRwo8eYwab8uH+Ftr43sXmt2FuArBp8Ei04tCKqvOcgF3eyyJfS6Zc8LuxA3dJRP/+GnextjowrcVPaLgcov6dRHA1lm5WWh0KIOkjrFkaF4nCCvTUFWznUMvCUorlirF4LPFJHPdKn/rxdpxeErl1Vu9u3bw3//8r8AAAD//7NUG+I=")
+	unpacked := packer.MustUnpack("eJzsV0uTo7oV3udnzDqVy6PdCanKwtAXAfbQ17hbEtohyQ3YEqbG2BhS+e8pCYMfPXNTk1Q2qSy63AXSeX7nfB9//3KoN+yXj1Js6CZr/tRJ8eWvX6j0G/K2zxMpDgRFIsWrRWqZu9fSlRk6i1TCgs/rgknev5YuDUvTD8s2D6tY8AC2SykOdD0TVPolBXD3GyIFDWKhzzyerRJBsXtIcSKWEh5TFB0IWjlE+gdmvZdLb14u34dfivxjirigCB65N2uolYjfcN4w4G+zzpQUQMG98BB6YZOs1W/UpGhWEAs2BM2MW/s8iEyyjrgn4xOVpCY27PS7t31O7KhN27rj6CxYv18s125NZS1SO/nI0GxHcP7slfM89Fxjg13xWroHavHey/dNCMQxk3DLfafnQSRSZH6wIDqlFuyZ5XSv+T4PvXlOrdlHajlHIs91aq+e1T1mwY77TkGqRLDLOR6IVsVEgVOxVsciNkHSpSg2sHWumYoJqxp+HWNqU5zsX0t3l+KkYJZjMhkL1g729Nm3fZ6hWctx0o950P76jNlJR5DfXPw1KZ4/2q5p5Zo8iMccRztTzZSv0DPy1HLaDXQKCs4fHDgfFIiev4zvr75vfObTO+AcsaX7c8hQbLyW7pFaTjv4Gv4ILrYEu4bGYRUbTMKC4q8aLxla6V+CZkUqz4JobEQtk86W4LindtSHwniM1aCmc8hwbIy9GmIRBkHGcxi4HbViwez4xKqv/24eNa1iwarkI5VQUjsSXv5Tvf1R/WsOYPNauo/P7/o74NQs2NiHwC04yAcMBtAYY2cVPJDJ97wJdWyzngLfIG93PRzj0vNw2x+K/JYB2N3VUj1XeO4HXN+eDz1XcKnm29G7Zpgttri9GwJo6Xm2Y4MAcdT5gqSmDz4IJoJWqxMHcatiS+35D+zAHXvZ5xwl7UMsyveJAGebWbBTM0Wt+BvB4YOd84l0TkdQUjPT6SlwbJXXa+kOz9rPuS/teMas84lozIhe12HAgMrbIDj64NI/cAT7sXbMggeCYoPa4adeZRac3dfftVJ0Nu/6p+K8nF+u72u2XLsmCebTLKiaXe8lp9Rqpp20XN/npWxtcKz75JVGTqQ4cAA7bKu9D6/7IIgFBXDLgdNdMXyZIdCIjdq946zOL/vvoQbLtWuwCooBw/GJBbtxNiSTTvPJbpCc7nnrtsbheLcn6r2dqJm+qRepKYAlQb5xfeaYPHBNPp/i+Uaw6FVOZFXbGYAKj2GK40jNIutysTGbq39vNs4u/1jv8qhM8zXw+zfFuThuUxSLhcdPHCctx6tq6c0rgs4Fs5M6tWOR4mibeewQenzoQccOKrbIagoimyLq2jxSuLJjI8XxPup2iy9/HGhebppvJfsO0b8haDApthdi31KkCMkUPIjq1LoIABzpgUXdRK49wYnJVELAOE6NezFlis49Wd8R8XjWIMhs9QL5VwJBmgWVfkWQqYb4SJGzI2/m0xK7RWodGqJ84dXvCYSrfZx0HL2XeFVvqTWTGeIm0+/en0PAOwa+Lhhweu47ajEbKTofBsAZOUWOReBlGU0LZlx4yqez06TXzXZ6qO1E0PVsRlFbTsskSJRYEvxlr/I6kUAv1iPxHDU4iliOG2QeljKpmTXEHOY/JUAagpMuQ/F/V4RccPJ/IfI/LUSaEMAnHkSFwpuuk+9oYXFd5A+CwZ7yXdzH+PB8WMbTgv4uWZiOneFkj+1IEAs+TSLlQhAai6sLIcr359B/Oi46Z8J/NP9dsvxPCXbaKT8k2UDvGp2bEj+TbeAb2csnvH/Cqao7rWL9QYRtXnNQfDAJK4KL9g4HYw+CZMbA+23/OzWruMx/eX856/3wW/n0bbH+XKPBjvKRP4decivemjCIxIUfbm2PJPtJ6HHwF8UZw25bTeTYpKgR2PI7Jv3Zd3E88owdC34Xl8bKFDOZanaJbdjL3wgeBcD8tk8391ZTbZmEDbWJwJbG0m1e2k4Ipg/En7iTFBz42o/quZ7d8RwgHbWMT1i61OqOX9Vdpj9QzYlnSBWd6M3evRcQdzOlPoZNCuBl/5OaBolg28/C6xZrd3avgmYUH9M5VVOmxJF8X3gV3xP09Bz+WhTMUD00+4UH/4ysu3yOEy+aprNYz2U0iKJXlR+zFYe/7yPrIqYGQSMo8HsOxJZZsGBSiZdWxVAxCXcZ/qrFUGb5MrN+1f/rjwhbcUteLVb7v335xx/+GQAA//+LKLK5")
 	SupportedMap = make(map[string]bool)
 
 	for f, v := range unpacked {
