@@ -69,6 +69,8 @@ func (r *RuleList) MarshalYAML() (interface{}, error) {
 			name = "extract_list_items"
 		case *InjectIndexRule:
 			name = "inject_index"
+		case *InjectStreamProcessorRule:
+			name = "inject_stream_processor"
 		case *MakeArrayRule:
 			name = "make_array"
 		case *RemoveKeyRule:
@@ -145,6 +147,8 @@ func (r *RuleList) UnmarshalYAML(unmarshal func(interface{}) error) error {
 			r = &ExtractListItemRule{}
 		case "inject_index":
 			r = &InjectIndexRule{}
+		case "inject_stream_processor":
+			r = &InjectStreamProcessorRule{}
 		case "make_array":
 			r = &MakeArrayRule{}
 		case "remove_key":
@@ -235,9 +239,9 @@ func MakeArray(item Selector, to string) *MakeArrayRule {
 // CopyToListRule is a rule which copies a specified
 // node into every item in a provided list.
 type CopyToListRule struct {
-	Item      Selector
-	To        string
-	Overwrite bool
+	Item       Selector
+	To         string
+	OnConflict string `yaml:"on_conflict" config:"on_conflict"`
 }
 
 // Apply copies specified node into every item of the list.
@@ -265,13 +269,18 @@ func (r *CopyToListRule) Apply(ast *AST) error {
 			continue
 		}
 
-		if !r.Overwrite {
-			_, found := listItemMap.Find(r.Item)
-			if found {
-				continue
+		if existingNode, found := listItemMap.Find(r.Item); found {
+			sourceNodeItemsList := sourceNode.Clone().Value().(Node) // key.value == node
+			if existingList, ok := existingNode.Value().(*List); ok {
+				existingList.value = mergeStrategy(r.OnConflict).Inject(existingList.Clone().Value().([]Node), sourceNodeItemsList.Value())
+			} else if existingMap, ok := existingNode.Value().(*Dict); ok {
+				existingMap.value = mergeStrategy(r.OnConflict).Inject(existingMap.Clone().Value().([]Node), sourceNodeItemsList.Value())
 			}
+
+			continue
 		}
 
+		// if not conflicting move entire node
 		listItemMap.value = append(listItemMap.value, sourceNode.Clone())
 	}
 
@@ -279,20 +288,20 @@ func (r *CopyToListRule) Apply(ast *AST) error {
 }
 
 // CopyToList creates a CopyToListRule
-func CopyToList(item Selector, to string, overwrite bool) *CopyToListRule {
+func CopyToList(item Selector, to, onMerge string) *CopyToListRule {
 	return &CopyToListRule{
-		Item:      item,
-		To:        to,
-		Overwrite: overwrite,
+		Item:       item,
+		To:         to,
+		OnConflict: onMerge,
 	}
 }
 
 // CopyAllToListRule is a rule which copies a all nodes
 // into every item in a provided list.
 type CopyAllToListRule struct {
-	To        string
-	Except    []string
-	Overwrite bool
+	To         string
+	Except     []string
+	OnConflict string `yaml:"on_conflict" config:"on_conflict"`
 }
 
 // Apply copies all nodes into every item of the list.
@@ -319,7 +328,7 @@ func (r *CopyAllToListRule) Apply(ast *AST) error {
 			continue
 		}
 
-		if err := CopyToList(item, r.To, r.Overwrite).Apply(ast); err != nil {
+		if err := CopyToList(item, r.To, r.OnConflict).Apply(ast); err != nil {
 			return err
 		}
 	}
@@ -328,11 +337,11 @@ func (r *CopyAllToListRule) Apply(ast *AST) error {
 }
 
 // CopyAllToList creates a CopyAllToListRule
-func CopyAllToList(to string, overwrite bool, except ...string) *CopyAllToListRule {
+func CopyAllToList(to, onMerge string, except ...string) *CopyAllToListRule {
 	return &CopyAllToListRule{
-		To:        to,
-		Except:    except,
-		Overwrite: overwrite,
+		To:         to,
+		Except:     except,
+		OnConflict: onMerge,
 	}
 }
 
@@ -414,9 +423,7 @@ func (r *InjectIndexRule) Apply(ast *AST) error {
 					value: &StrVal{value: fmt.Sprintf("%s-%s-%s", r.Type, dataset, namespace)},
 				})
 			}
-
 		}
-
 	}
 
 	return nil
@@ -426,6 +433,116 @@ func (r *InjectIndexRule) Apply(ast *AST) error {
 func InjectIndex(indexType string) *InjectIndexRule {
 	return &InjectIndexRule{
 		Type: indexType,
+	}
+}
+
+// InjectStreamProcessorRule injects a add fields processor providing
+// stream type, namespace and dataset fields into events.
+type InjectStreamProcessorRule struct {
+	Type       string
+	OnConflict string `yaml:"on_conflict" config:"on_conflict"`
+}
+
+// Apply injects processor into input.
+func (r *InjectStreamProcessorRule) Apply(ast *AST) error {
+	const defaultNamespace = "default"
+	const defaultDataset = "generic"
+
+	datasourcesNode, found := Lookup(ast, "datasources")
+	if !found {
+		return nil
+	}
+
+	datasourcesList, ok := datasourcesNode.Value().(*List)
+	if !ok {
+		return nil
+	}
+
+	for _, datasourceNode := range datasourcesList.value {
+		namespace := defaultNamespace
+		nsNode, found := datasourceNode.Find("namespace")
+		if found {
+			nsKey, ok := nsNode.(*Key)
+			if ok {
+				namespace = nsKey.value.String()
+			}
+		}
+
+		// get input
+		inputNode, found := datasourceNode.Find("inputs")
+		if !found {
+			continue
+		}
+
+		inputsList, ok := inputNode.Value().(*List)
+		if !ok {
+			continue
+		}
+
+		for _, inputNode := range inputsList.value {
+			streamsNode, ok := inputNode.Find("streams")
+			if !ok {
+				continue
+			}
+
+			streamsList, ok := streamsNode.Value().(*List)
+			if !ok {
+				continue
+			}
+
+			for _, streamNode := range streamsList.value {
+				streamMap, ok := streamNode.(*Dict)
+				if !ok {
+					continue
+				}
+
+				dataset := defaultDataset
+
+				dsNode, found := streamNode.Find("dataset")
+				if found {
+					dsKey, ok := dsNode.(*Key)
+					if ok {
+						dataset = dsKey.value.String()
+					}
+				}
+
+				// get processors node
+				processorsNode, found := streamNode.Find("processors")
+				if !found {
+					processorsNode = &Key{
+						name:  "processors",
+						value: &List{value: make([]Node, 0)},
+					}
+
+					streamMap.value = append(streamMap.value, processorsNode)
+				}
+
+				processorsList, ok := processorsNode.Value().(*List)
+				if !ok {
+					return errors.New("InjectStreamProcessorRule: processors is not a list")
+				}
+
+				processorMap := &Dict{value: make([]Node, 0)}
+				processorMap.value = append(processorMap.value, &Key{name: "fields", value: &Dict{value: []Node{
+					&Key{name: "stream.type", value: &StrVal{value: r.Type}},
+					&Key{name: "stream.namespace", value: &StrVal{value: namespace}},
+					&Key{name: "stream.dataset", value: &StrVal{value: dataset}},
+				}}})
+
+				addFieldsMap := &Dict{value: []Node{&Key{"add_fields", processorMap}}}
+				processorsList.value = mergeStrategy(r.OnConflict).InjectItem(processorsList.value, addFieldsMap)
+			}
+		}
+	}
+
+	return nil
+}
+
+// InjectStreamProcessor creates a InjectStreamProcessorRule
+func InjectStreamProcessor(onMerge, streamType string) *InjectStreamProcessorRule {
+	return &InjectStreamProcessorRule{
+		OnConflict: onMerge,
+		Type:       streamType,
 	}
 }
 
