@@ -10,6 +10,10 @@ rules:
 - inject_index:
     type: metrics
 
+- inject_stream_processor:
+    on_conflict: insert_after
+    type: metrics
+
 - extract_list_items:
     path: datasources
     item: inputs
@@ -20,14 +24,17 @@ rules:
     rules:
     - copy_all_to_list:
         to: streams
-        overwrite: false
-        except: ["streams", "id", "enabled"]
+        on_conflict: noop
+        except: ["streams", "id", "enabled", "processors"]
+    - copy_to_list:
+        item: processors
+        to: streams
+        on_conflict: insert_before
 
 - extract_list_items:
     path: inputsstreams
     item: streams
     to: inputs
-
 
 - filter_values_with_regexp:
     key: type
