@@ -25,3 +25,5 @@
 - Display the stability of the agent at enroll and start.  {pull}17336[17336]
 - Support for config constraints {pull}17112[17112]
 - Introduced post install hooks {pull}17241[17241]
+- Expose stream.* variables in events {pull}17468[17468]
+
